--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,16 @@ p {
     width: 300px;
     height: auto;
     border: 2px solid #000;
+    /* margin-top: 1rem;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    padding-top: 2rem;
+    padding-right: 1rem;
+    padding-bottom: 3rem;
+    padding-left: 5rem; */
+    margin: 1rem 0 0 0;
+    padding: 2rem 1rem 3rem 5rem;
 }
 
 .video-example {
